--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,65 @@
+aioredis==2.0.1
+amqp==5.1.1
 anyio==3.6.2
+async-timeout==4.0.2
+billiard==3.6.4.0
+Brotli==1.0.9
+celery==5.2.7
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+ConfigArgParse==1.5.3
+cryptography==39.0.1
 fastapi==0.92.0
+flake8==6.0.0
+Flask==2.2.3
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
+flower==1.2.0
+gevent==22.10.2
+geventhttpclient==2.0.8
+greenlet==2.0.2
 gunicorn==20.1.0
 h11==0.14.0
+hiredis==2.2.2
+humanize==4.6.0
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
 joblib==1.2.0
+kombu==5.2.4
+locust==2.14.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+mccabe==0.7.0
+mdurl==0.1.2
+more-itertools==8.14.0
+msgpack==1.0.4
 numpy==1.24.2
 pandas==1.5.3
+pptree==3.1
+prometheus-client==0.16.0
+prompt-toolkit==3.0.37
+psutil==5.9.4
+pycodestyle==2.10.0
+pycparser==2.21
 pydantic==1.10.5
+pyflakes==3.0.1
+Pygments==2.14.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-ulid==1.1.0
 pytz==2022.7.1
+pyzmq==25.0.0
+redis==4.5.1
+redis-om==0.1.2
+requests==2.28.2
+rich==13.3.1
+roundrobin==0.0.4
 scikit-learn==1.2.1
 scipy==1.10.1
 six==1.16.0
@@ -17,6 +67,15 @@ sklearn==0.0.post1
 sniffio==1.3.0
 starlette==0.25.0
 threadpoolctl==3.1.0
+tornado==6.2
+types-pyOpenSSL==23.0.0.4
+types-redis==4.5.1.3
 typing_extensions==4.5.0
+urllib3==1.26.14
 uvicorn==0.20.0
+vine==5.0.0
+wcwidth==0.2.6
+Werkzeug==2.2.3
 xgboost==1.7.4
+zope.event==4.6
+zope.interface==5.5.2
